[package]
name = "aoc-2022"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.11.1"
itertools = "0.14.0"
priority-queue = "2.1.1"
range-collections = "0.4.5"
mimalloc = "0.1.43"

[profile.dev]
opt-level = 3
codegen-units = 1
lto = false

[profile.release]
opt-level = 3
codegen-units = 1
lto = false